nginxIngressController/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-ingress
spec:
  type: ClusterIP 
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    name: nginx-ingress-lb
