nginxIngressController/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - mysite.example.com
    secretName: damp01-tls
  rules:
  - host: mysite.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
